CSS/articleStyles.css
::-webkit-scrollbar {
    display: none;
}

* {
    cursor: none;
    user-select: none;
    scroll-behavior: smooth;
    scroll-padding-top: 100px;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Arial', sans-serif;
    background: #181A1B;
}



/* Parallax Container */
.parallax-container {
    position: relative;
    height: 100vh;
    /* overflow: hidden; */
    color: #fff; /* Text color on top of the image */
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Parallax Text */
.parallax-text {
    font-size: 2em;
    animation: slideUp 0.8s ease forwards;
    position: absolute;
    width: 50%;
}

@keyframes slideUp {
    from {
        transform: translateY(40px);
    } to {
        transform: translateY(-40px);
    }
}

.parallax-text h1 {
    font-size: 3em;
    margin-bottom: 0;
}

.parallax-text p {
    font-style: italic;
}


.parallax-nav {
    position: -webkit-sticky;
    position: sticky;
    top:0;
    /* bottom: 1rem; */
    margin-left: 50%;
    transform: translateX(-50%);
    padding: 10px;
    text-align: center;
    width: 100%;
    background-color: #181A1B;
    z-index: 1;
}



.parallax-nav nav a:nth-child(1) {
    animation: fade 0.75s ease forwards;
}

.parallax-nav a:nth-child(2) {
    animation: fade 0.75s ease 0.3s forwards;
}

.parallax-nav a:nth-child(3) {
    animation: fade 0.75s ease 0.6s forwards;
}

.parallax-nav a:nth-child(4) {
    animation: fade 0.75s ease 0.9s forwards;
}


.parallax-nav a {
    text-decoration: none;
    color: #fff;
    margin: 1em;
    transition: 0.3s ease;
    font-size: 1.5rem;
    opacity: 0;
}

.parallax-nav a:hover {
    font-size: 1.8rem;
    margin: 0.8rem;
}

.article {
    color: #fff;

    /* Scroll Snap */
    scroll-snap-type: y mandatory; 
}

/* Article title */
.article h2 {
    padding: 0.8em;
    text-align: center;
    font-size: 2em;
}

/* Article content */
.article p {
    text-align: left;
    display: flex;
    align-items: center;
    margin-left: 20vw;
    margin-right: 20vw;
    justify-content: center;
    font-size: 1.8em;
    line-height: 1.5em;
    text-indent: 3em;

    /* Experimental Animation */
    animation: fade linear both, gradientReveal ease both;
    animation-timeline: view();
    animation-range: entry 50% cover 50%;

    background: linear-gradient(90deg, white 0%, white 25%, transparent 100%);
    background-size: 200%;
    background-repeat: no-repeat;
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;

    /* Scroll Snap */
    scroll-snap-align: center;
    
}

.article .linebreak {
    font-size: 6rem;
}

@keyframes fade {
    from {
        opacity: 0;
    } to {
        opacity: 1;
    }
}

@keyframes gradientReveal {
    0% {
        background-position-x: 200%;
    } 60% {
        transform: translateY(60px);
    } 
    100% {
        background-position-x: 0%;
    }
}

